--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <section>
-      <h1>Weather voice Bot</h1>
+      <h1>Interview BOT</h1>
       <h2>with Web Speech API</h2>
 
       <button><i class="fa fa-microphone"></i></button>
